styles/style.css
:root{
    --white: #FFFFFB;
    --dark-grey: #2c2c2c;
    --red: #E74545;
    --nav-width: 200px;
    --title-height: 50px;
}

html{
    font-family: 'EBGaramond', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
}

body{
    background-color: var(--white);
}

.dark-mode{
    background-color: var(--dark-grey);
    color: var(--white);
}

@font-face {
    font-family: 'EBGaramond';
    src: url('fonts/adobe-garamond-bold/EBGaramond-Bold.ttf');
}

/* Title */
.title{
    display: block;
    margin: 5px 0px;
    padding: 0px;
    text-align: center;
    width: 100%;

    font-size: xx-large;
    color: var(--white);

    background-color: var(--red);

    position: fixed;

    z-index: 5;
}

.toggle-dark-mode-button{
    float: right;
    margin-right: 20px;
    top: 50%;
    -ms-transform: translateY(+50%);
    transform: translateY(+50%);
}

/*Page*/
.not-header{
    display: flex;
    height: 100%;
    min-height: 100%;
}

.footer{
    display: block;
    margin: 0px;
    padding: 5px;
    width: 95%;
    height: 250px;
    text-align: right;
    transform: translate(0%, 50%);
}

/*Navigation Bar*/
.nav-bar-list{
    flex: var(--nav-width);
    display: block;
    width: var(--nav-width);
    height: 100%;

    list-style-type: none;
    margin: 0;
    margin-top: var(--title-height);
    padding: 0;

    background-color: var(--red);

    position: fixed;

    z-index: 1;
}

.nav-link{
    display: block;
    padding: 25px 16px;

    color: var(--white);
    background-color: var(--red);
    text-align: center;
    text-decoration: none;
}

.nav-link:hover{    
    display: block;
    padding: 25px 16px;

    color: var(--red);
    background-color: var(--white);
    text-align: center;
    text-decoration: none;
}

/*Page Content*/
.content{
    position: flex;
    vertical-align: top;
    margin: auto;
    margin-top: var(--title-height);
    padding: 10px;
    max-width: 600px;
    text-align: justify;
    height: 100%;
    z-index: 0;
}

.content h1,h2,h3{
    color: var(--red);
}

.social-link{
    color: var(--red);
    text-decoration: none;
}

.social-link:visited{
    color: var(--red);
    text-decoration: none;
}

.link-image{
    width: 50px;
    position: relative;
    top: 5px;
}

.subtitle{
    color: var(--red);
}

b{
    color: var(--red);
}

.content-header{
    display: block;
}

.content-header h1{
    color: var(--red);
}

.header-redirection-link{
    color: var(--red);
}

.decklist-redirection-link{
    color: var(--red);
}

.card-image-span{
    display: none;
}

.card-name{
    color: var(--red);
    z-index: 99;
}

.card-name a{
    color: var(--red);
    text-decoration: none;
    z-index: 99;
}

.card-name:hover ~ .card-image-span{
    display: block;
    position: absolute;
    z-index: 2;
}

.card-image{
    width: 250px;
}

.ins-outs{
    color: var(--red);
}

